--- a/RestServer/package.json
+++ b/RestServer/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.18.2",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
