--- a/ApplicationServer/package.json
+++ b/ApplicationServer/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@infinitycube/gravatar": "^1.3.1",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
