--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     - database
     environment:
     - MONGO_URL=mongodb://database_1:27017/
+    - APPSERVER_URL=http://localhost:8888
     - NODE_ENV=production
     ports:
     - "3000:3000"
@@ -18,6 +19,6 @@ services:
     environment:
     - REST_URL=http://localhost:3000/
     ports:
-    - "8080:8080"
+    - "8888:8888"
   database:
     image: mongo
